--- a/main/css/style.css
+++ b/main/css/style.css
@@ -132,3 +132,16 @@ footer {
   height: 350px;
 }
 
+.nav-avatar {
+  width: 38px;
+  height: 38px;
+  border-radius: 50%;
+  object-fit: cover;
+  border: 2px solid #fbc02d;
+}
+
+.nav-username {
+  color: #fff;
+  font-weight: 600;
+  font-size: 14px;
+}
